--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "12.23.26",
+    "framer-motion": "^12.23.26",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "microcms-js-sdk": "^3.2.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
