--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-﻿node_modules
-.next
+node_modules/
+.next/
 .env
 .env.local
-.vercel
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vercel/
