--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "recharts": "2.15.4",
     "resend": "^4.0.0",
     "sonner": "^1.7.4",
+    "stripe": "^20.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
